{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 1375,
  "lineage": "5f88fa5c-c697-2030-7066-068e03a69bd4",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0caf778a172362f1c",
            "arn": "arn:aws:ec2:ap-south-1:682800314838:instance/i-0266813558cd06ba5",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-profile",
            "id": "i-0266813558cd06ba5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "artemis-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ece46733e726737f",
            "private_dns": "ip-10-0-146-216.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.146.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e1ba519e7925a47c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05376cf82f633556d",
            "tags": {
              "Name": "artemis-jenkins"
            },
            "tags_all": {
              "Name": "artemis-jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01da0972789b67ea6"
            ]
          },
          "dependencies": [
            "module.compute.data.template_file.jenkins",
            "module.iam.aws_iam_instance_profile.ec2-profile",
            "module.iam.aws_iam_role.ec2_access_role",
            "module.my_subnet.aws_subnet.private",
            "module.my_subnet.data.aws_availability_zones.available",
            "module.my_vpc.aws_vpc.main",
            "module.secret.aws_key_pair.kp",
            "module.secret.aws_secretsmanager_secret.secret",
            "module.secret.aws_secretsmanager_secret_version.secret_version",
            "module.secret.tls_private_key.pk",
            "module.sg.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0caf778a172362f1c",
            "arn": "arn:aws:ec2:ap-south-1:682800314838:instance/i-0be86efe94d814668",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-profile",
            "id": "i-0be86efe94d814668",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "key_name": "artemis-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0168051dae46344d9",
            "private_dns": "ip-10-0-31-122.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.31.122",
            "public_ip": "13.235.50.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01a334d3f4e86b031",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0553626e46917f50d",
            "tags": {
              "Name": "artemis-jump-server"
            },
            "tags_all": {
              "Name": "artemis-jump-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01da0972789b67ea6"
            ]
          },
          "dependencies": [
            "module.compute.data.template_file.jump-server",
            "module.iam.aws_iam_instance_profile.ec2-profile",
            "module.iam.aws_iam_role.ec2_access_role",
            "module.my_subnet.aws_subnet.public",
            "module.my_subnet.data.aws_availability_zones.available",
            "module.my_vpc.aws_vpc.main",
            "module.secret.aws_key_pair.kp",
            "module.secret.aws_secretsmanager_secret.secret",
            "module.secret.aws_secretsmanager_secret_version.secret_version",
            "module.secret.tls_private_key.pk",
            "module.sg.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:682800314838:internet-gateway/igw-073bda0636ff4abec",
            "id": "igw-073bda0636ff4abec",
            "owner_id": "682800314838",
            "tags": {
              "Name": "igw-artemis"
            },
            "tags_all": {
              "Name": "igw-artemis"
            },
            "vpc_id": "vpc-0c8322b9874d1dc65"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_ngw",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4c53a27364ff7eb",
            "association_id": "eipassoc-0807d20e19a33d224",
            "domain": "vpc",
            "id": "eipalloc-0c4c53a27364ff7eb",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0135d893c5d54b5f4",
            "private_dns": "ip-10-0-29-88.ap-south-1.compute.internal",
            "private_ip": "10.0.29.88",
            "public_dns": "ec2-15-206-120-36.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.120.36",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.my_ngw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4c53a27364ff7eb",
            "connectivity_type": "public",
            "id": "nat-016c25435173496d5",
            "network_interface_id": "eni-0135d893c5d54b5f4",
            "private_ip": "10.0.29.88",
            "public_ip": "15.206.120.36",
            "subnet_id": "subnet-0553626e46917f50d",
            "tags": {
              "Name": "ngw-artemis"
            },
            "tags_all": {
              "Name": "ngw-artemis"
            }
          },
          "dependencies": [
            "module.my_igw.aws_internet_gateway.main",
            "module.my_ngw.aws_eip.main",
            "module.my_subnet.aws_subnet.public",
            "module.my_subnet.data.aws_availability_zones.available",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_subnet",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1ef9425f32c493b",
            "original_route_table_id": "rtb-0a64307906ef0f1fd",
            "route_table_id": "rtb-00156aec506e08ecb",
            "vpc_id": "vpc-0c8322b9874d1dc65"
          },
          "dependencies": [
            "module.my_igw.aws_internet_gateway.main",
            "module.my_subnet.aws_route_table.igw",
            "module.my_subnet.aws_subnet.public",
            "module.my_subnet.data.aws_availability_zones.available",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:682800314838:route-table/rtb-00156aec506e08ecb",
            "id": "rtb-00156aec506e08ecb",
            "owner_id": "682800314838",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-073bda0636ff4abec",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c8322b9874d1dc65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_igw.aws_internet_gateway.main",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:682800314838:route-table/rtb-0ec811e4c26dcf7f2",
            "id": "rtb-0ec811e4c26dcf7f2",
            "owner_id": "682800314838",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-016c25435173496d5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ngw-artemis"
            },
            "tags_all": {
              "Name": "ngw-artemis"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8322b9874d1dc65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_igw.aws_internet_gateway.main",
            "module.my_ngw.aws_eip.main",
            "module.my_ngw.aws_nat_gateway.main",
            "module.my_subnet.aws_subnet.public",
            "module.my_subnet.data.aws_availability_zones.available",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cabb0ce40acf42ad",
            "route_table_id": "rtb-0ec811e4c26dcf7f2",
            "subnet_id": "subnet-004beb94d990adaac"
          },
          "dependencies": [
            "module.my_igw.aws_internet_gateway.main",
            "module.my_ngw.aws_eip.main",
            "module.my_ngw.aws_nat_gateway.main",
            "module.my_subnet.aws_route_table.main",
            "module.my_subnet.aws_subnet.private",
            "module.my_subnet.aws_subnet.public",
            "module.my_subnet.data.aws_availability_zones.available",
            "module.my_subnet.data.aws_subnet_ids.private",
            "module.my_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081f9f7d1ceca3735",
            "route_table_id": "rtb-0ec811e4c26dcf7f2",
            "subnet_id": "subnet-05376cf82f633556d"
          },
          "dependencies": [
            "module.my_igw.aws_internet_gateway.main",
            "module.my_ngw.aws_eip.main",
            "module.my_ngw.aws_nat_gateway.main",
            "module.my_subnet.aws_route_table.main",
            "module.my_subnet.aws_subnet.private",
            "module.my_subnet.aws_subnet.public",
            "module.my_subnet.data.aws_availability_zones.available",
            "module.my_subnet.data.aws_subnet_ids.private",
            "module.my_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f62b2db35c3ecfc",
            "route_table_id": "rtb-0ec811e4c26dcf7f2",
            "subnet_id": "subnet-0cbc29e4e27bf68fb"
          },
          "dependencies": [
            "module.my_igw.aws_internet_gateway.main",
            "module.my_ngw.aws_eip.main",
            "module.my_ngw.aws_nat_gateway.main",
            "module.my_subnet.aws_route_table.main",
            "module.my_subnet.aws_subnet.private",
            "module.my_subnet.aws_subnet.public",
            "module.my_subnet.data.aws_availability_zones.available",
            "module.my_subnet.data.aws_subnet_ids.private",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:682800314838:subnet/subnet-05376cf82f633556d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.128.0/17",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05376cf82f633556d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "682800314838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "artemis",
              "Name": "private.artemis-1",
              "tier": "private"
            },
            "tags_all": {
              "Environment": "artemis",
              "Name": "private.artemis-1",
              "tier": "private"
            },
            "vpc_id": "vpc-0c8322b9874d1dc65"
          },
          "dependencies": [
            "module.my_subnet.data.aws_availability_zones.available",
            "module.my_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:682800314838:subnet/subnet-0cbc29e4e27bf68fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbc29e4e27bf68fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "682800314838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "artemis",
              "Name": "private.artemis-2",
              "tier": "private"
            },
            "tags_all": {
              "Environment": "artemis",
              "Name": "private.artemis-2",
              "tier": "private"
            },
            "vpc_id": "vpc-0c8322b9874d1dc65"
          },
          "dependencies": [
            "module.my_subnet.data.aws_availability_zones.available",
            "module.my_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:682800314838:subnet/subnet-004beb94d990adaac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004beb94d990adaac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "682800314838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "artemis",
              "Name": "private.artemis-3",
              "tier": "private"
            },
            "tags_all": {
              "Environment": "artemis",
              "Name": "private.artemis-3",
              "tier": "private"
            },
            "vpc_id": "vpc-0c8322b9874d1dc65"
          },
          "dependencies": [
            "module.my_subnet.data.aws_availability_zones.available",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:682800314838:subnet/subnet-0553626e46917f50d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0553626e46917f50d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "682800314838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "artemis",
              "Name": "public.artemis-1"
            },
            "tags_all": {
              "Environment": "artemis",
              "Name": "public.artemis-1"
            },
            "vpc_id": "vpc-0c8322b9874d1dc65"
          },
          "dependencies": [
            "module.my_subnet.data.aws_availability_zones.available",
            "module.my_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:682800314838:subnet/subnet-03aabd972879e3c0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.8.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03aabd972879e3c0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "682800314838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "artemis",
              "Name": "public.artemis-2"
            },
            "tags_all": {
              "Environment": "artemis",
              "Name": "public.artemis-2"
            },
            "vpc_id": "vpc-0c8322b9874d1dc65"
          },
          "dependencies": [
            "module.my_subnet.data.aws_availability_zones.available",
            "module.my_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:682800314838:subnet/subnet-0bda11f0d4c281744",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.4.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bda11f0d4c281744",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "682800314838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "artemis",
              "Name": "public.artemis-3"
            },
            "tags_all": {
              "Environment": "artemis",
              "Name": "public.artemis-3"
            },
            "vpc_id": "vpc-0c8322b9874d1dc65"
          },
          "dependencies": [
            "module.my_subnet.data.aws_availability_zones.available",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:682800314838:vpc/vpc-0c8322b9874d1dc65",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-054f2db48bae3c009",
            "default_route_table_id": "rtb-00156aec506e08ecb",
            "default_security_group_id": "sg-0ef7edba238fbb81a",
            "dhcp_options_id": "dopt-0894a8d86e593fa84",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c8322b9874d1dc65",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00156aec506e08ecb",
            "owner_id": "682800314838",
            "tags": {
              "Name": "vpc.artemis"
            },
            "tags_all": {
              "Name": "vpc.artemis"
            }
          }
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:682800314838:security-group/sg-01da0972789b67ea6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01da0972789b67ea6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ES-HTTP",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ES-TCP",
                "from_port": 9300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9300
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230326123715401000000001",
            "name_prefix": "terraform-",
            "owner_id": "682800314838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "artemis-sg"
            },
            "tags_all": {
              "Name": "artemis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8322b9874d1dc65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-101422527",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01da0972789b67ea6",
            "security_group_rule_id": "sgr-0c880ba6974dda570",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.main",
            "module.sg.aws_security_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ES-HTTP",
            "from_port": 9200,
            "id": "sgrule-3914500447",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01da0972789b67ea6",
            "security_group_rule_id": "sgr-07a3ab8e052a7e788",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9200,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.main",
            "module.sg.aws_security_group.main"
          ]
        },
        {
          "index_key": "ingress2",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ES-TCP",
            "from_port": 9300,
            "id": "sgrule-11061017",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01da0972789b67ea6",
            "security_group_rule_id": "sgr-0578ee07a0c8f7467",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9300,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.main",
            "module.sg.aws_security_group.main"
          ]
        },
        {
          "index_key": "ingress3",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-451445117",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01da0972789b67ea6",
            "security_group_rule_id": "sgr-0b12cd4fa989dd656",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.main",
            "module.sg.aws_security_group.main"
          ]
        }
      ]
    }
  ]
}